# Silicon-PS2-Stable

./: CMakeLists.txt  M4_OPTIMIZATION_NOTES.md  README.md
.github/workflows/: main.yml
__MACOSX/src/cpp/: ._Info.plist.in
__MACOSX/src/cpp/pcsx2/GS/Renderers/Metal/: ._fxaa.metal
__MACOSX/src/cpp/pcsx2/x86/: ._microVU_Alloc.inl
assets/resources/shaders/common/: ffx_a.h
cpp/: CMakeLists.txt  ios_main.h  ios_main.mm
cpp/common/: FileSystem.cpp  Perf.cpp  StackWalker.cpp  ZipHelpers.h
cpp/pcsx2/: Counters.cpp  VMManager.cpp
cpp/pcsx2/GS/Renderers/HW/: GSRendererHW.cpp
